<resources>
    <string name="app_name">Sandsara</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="track">Tracks</string>
    <string name="playlist">Playlist</string>
    <string name="speed">Ball Speed</string>
    <string name="pause_between_track">Pause between tracks</string>
    <string name="brightness">Brightness</string>
    <string name="lightMode">Lighting Mode</string>
    <string name="colorSetting">Color Settings</string>
    <string name="lightColor">Lighting color temperature</string>
    <string name="nightMode">Night Mode</string>
    <string name="advance">Advanced</string>
    <string name="visitSand">Visit SandSara</string>
    <string name="help">Help</string>
    <string name="updateFirmware">Firmware Update</string>
    <string name="sleep">Sleep</string>
    <string name="recommendPlaylist">Recommended Playlists</string>
    <string name="newTrack">New Tracks</string>
    <string name="defPlaylist">Default Playlist</string>
    <string name="guestArtist">Guest Artist</string>
    <string name="demo">Demo</string>
    <string name="favorites">Favorites</string>
    <string name="createPlaylist">Create Playlist</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="search">Search</string>
    <string name="recommendTracks">Recommended Tracks</string>
    <string name="browse">Browse</string>
    <string name="no_device_found">No Sandsara detected</string>
    <string name="retry">Retry</string>
    <string name="found_sandsara">Connected to </string>
    <string name="strip_direction">Strip direction</string>
    <string name="stop">Stop</string>
    <string name="discover_ble">Discover device</string>
    <string name="dismiss">Dismiss</string>
    <string name="basic_setting">Basic Settings</string>
    <string name="rotate">Rotate</string>
    <string name="cycle">Cycle</string>
    <string name="mode_static">Static</string>
    <string name="color_pallete">Color Pallete</string>
    <string name="light_cycle_speed">Light Cycle Speed</string>
    <string name="advance_setting">Advanced Settings</string>
    <string name="website">Sandsara\'s Website</string>
    <string name="about">About this Sandsara</string>
    <string name="firmware">Firmware version: </string>
    <string name="device_name">Name: </string>
    <string name="change_name">Change name</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="presets">Presets</string>
    <string name="color_temperature">Color Temperature</string>
    <string name="color_custom">Custom Color</string>
    <string name="ok">Ok</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">There is some error while load data</string>
    <string name="empty_data">No data found</string>
    <string name="unknown_device_name">Unknown device</string>
    <string name="unknown_version">N/A</string>
    <string name="slide_to_delete">Slide to delete</string>
    <string name="flip_direction">Flip Direction</string>
    <string name="delete">Delete</string>
    <string name="download_to_library">Download to Library</string>
    <string name="demo_num_track_to_sync">2 Tracks need to be synced 3min estimated</string>
    <string name="demo_est_time">3min estimated</string>
    <string name="sync_all">Sync All</string>
    <string name="are_you_sure">Are you sure to delete this playlist?</string>
    <string name="failed_to_connect">Failed to connect with Sandsara</string>
    <string name="support_ble">Your device doesn\'t support ble</string>
    <string name="permission_loc">We need this permission for scanning ble devices</string>
    <string name="you_have_to_connect_to_device">You have to connect to device first</string>
    <string name="change_device_name">Enter new device\'s name</string>
    <string name="downloading">Downloading...</string>
    <string name="sync_to_sandsara">Sync to Sandsara</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="do_you_want_to_delete">Do you really want to delete this playlist?</string>
    <string name="syncing_state">Syncing tracks. Playback will resume soon.</string>
    <string name="connect_to_sand">Connect to Sandsara</string>
    <string name="connect_to">Connect to %1$s</string>
    <string name="connect_desc">Make sure your Sandsara is closeby and plugged to the wall.</string>
    <string name="connect_now">Connect now</string>
    <string name="sync_failed">Synchronized failed</string>
    <string name="choose_device">Choose your devices</string>
    <string name="skip">Skip</string>
    <string name="syncing">Syncing</string>
    <string name="require_connection">Require connection to sync</string>
    <string name="connecting">Connecting...</string>
    <string name="connect_to_other_sand">Connect to a different Sandsara</string>
    <string name="download">Download</string>
    <string name="current_firmware">"Current Firmware: %1$s"</string>
    <string name="name">"Name: %1$s"</string>
    <string name="updatable_firmware">Firmware update available: %1$s</string>
    <string name="by_author">By %1$s</string>
    <string name="num_track_need_to_sync">%1$d tracks need to be synced</string>
    <string name="do_you_want_to_reset">Do you want to factory reset?</string>
    <string name="failed_to_play">Failed to play playlist</string>
    <string name="not_implement_yet">Not implement yet</string>
    <string name="next_up">Next up:</string>
    <string name="now_playing">Now playing</string>
    <string name="scan_failed">Failed to scan devices</string>
    <string name="not_found">Not found</string>
    <string name="not_found_playlist">Ooops, we couldn\'t find any Playlists that match your search term, please try another one.</string>
    <string name="not_found_track">Ooops, we couldn\'t find any Tracks that match your search term, please try another one.</string>
    <string name="no_recommend_playlist">No recommend Playlist found</string>
    <string name="no_recommend_track">No recommend Tracks found</string>
    <string name="empty_track">No tracks found</string>
    <string name="empty_playlist">No playlists found</string>
    <string name="upgrade_successfully">Upgrade successfully</string>
    <string name="upgrade_failed">Upgrade failed. Please retry later!!!</string>
    <string name="prepare_playlist">Preparing playlist</string>
    <string name="failed_to_play_playlist">Failed to play playlist</string>
    <string name="device_calibrating">Sandsara is calibrating...</string>
    <string name="device_busy">Sandsara is busy...</string>
    <string name="failed_to_load_playlist">Failed to load playlist detail</string>
    <string name="download_failed">Download file failed</string>
    <string name="connecting_to_sandsara">Connecting to Sandsara...</string>
    <string name="queue">Queue</string>
    <string name="add_to_queue_success">Add to queue successfully</string>
    <string name="add_to_queue_failed">Add to queue failed</string>
    <string name="failed_to_load">Failed to load tracks</string>
    <string name="sync_message">This process can take a few minutes</string>
    <string name="sync_info">%1$d / %2$d track are synced</string>
    <string name="upgrading">Sandsara is updating. Please wait!!!</string>
    <string name="device_sleep">Sandsara is asleep</string>
    <string name="favorite">favorite</string>
    <string name="failed_to_load_all_playlist">Failed to load all playlist</string>
    <string name="failed_to_load_all_tracks">Failed to load all tracks</string>
    <string name="device_name_title">Device name:</string>
    <string name="my_buddy">My buddy</string>
    <string name="factory_reset_success">Factory reset successfully</string>
    <string name="failed_to_reset">Failed to reset</string>
    <string name="change_device_name_success">Change device name successfully</string>
    <string name="failed_to_update_device_name">Failed to update device name</string>
</resources>