<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:isScrollContainer="true"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvSetting"
            style="@style/H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBasicSetting"
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/basic_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSetting" />

        <TextView
            android:id="@+id/tvSpeed"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBasicSetting" />

        <!-- Seekbar -->
        <com.google.android.material.slider.Slider
            android:id="@+id/seek_ball_speed"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSpeed"
            app:thumbColor="@color/white"
            app:tickColor="@color/white"
            app:trackColor="@color/white" />

        <TextView
            android:id="@+id/tvBrightness"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/brightness"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seek_ball_speed" />

        <!-- Seekbar -->
        <com.google.android.material.slider.Slider
            android:id="@+id/seekBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:valueFrom="0"
            android:valueTo="100"
            android:stepSize="1"
            app:layout_constraintTop_toBottomOf="@id/tvBrightness"
            app:thumbColor="@color/white"
            app:tickColor="@color/white"
            app:trackColor="@color/white" />

        <TextView
            android:id="@+id/tvLightMode"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/colorSetting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBrightness" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:layout_constraintTop_toBottomOf="@id/tvLightMode"
            app:tabIndicatorColor="@null"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="#5CE8E8E8">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cycle"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mode_static"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/colorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tabLight"/>

        <TextView
            android:id="@+id/tvSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/colorContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sleep"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/white"
            app:useMaterialThemeColors="true"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/tvSleep"
            app:layout_constraintBottom_toBottomOf="@id/tvSleep"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvAdvance"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginTop="16dp"
            android:text="@string/advance_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSleep" />

        <TextView
            android:id="@+id/tvWebsite"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginTop="16dp"
            android:text="@string/website"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAdvance" />

        <TextView
            android:id="@+id/tvHelp"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginTop="16dp"
            android:text="@string/help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWebsite" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/grColor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="tvAdvance,tvHelp,tvWebsite,tvSleep,switch_sleep"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>