<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvColorPallete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginTop="16dp"
        android:text="@string/color_pallete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.ht117.sandsara.view.ColorSlider
        android:id="@+id/colorSliderPallete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvColorPallete"
        android:layout_marginTop="16dp"/>

    <codes.side.andcolorpicker.view.swatch.SwatchView
        android:id="@+id/viewEditColor"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/colorSliderPallete"
        tools:visibility="visible"
        tools:background="@color/teal_200"
        android:visibility="gone"/>

    <com.ht117.sandsara.view.HSLColorView
        android:id="@+id/hslColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewEditColor"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hslColor"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:layout_gravity="start"
            android:src="@drawable/ic_trash"/>

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:src="@drawable/ic_check_mark"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvPresets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Button"
        app:layout_constraintTop_toBottomOf="@id/buttons"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/presets"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPresets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPresets"
        tools:listitem="@layout/item_preset"
        tools:itemCount="15"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/tvLightCycleSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvPresets"
        android:text="@string/light_cycle_speed"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/light_speed"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:valueFrom="1"
        android:valueTo="100"
        android:stepSize="1"
        app:trackColor="@color/white"
        app:thumbColor="@color/white"
        app:tickColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvLightCycleSpeed"/>

    <TextView
        android:id="@+id/tv_flip_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/flip_direction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/light_speed"
        style="@style/Button"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/flip_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:useMaterialThemeColors="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:shadowColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/tv_flip_direction"
        app:layout_constraintBottom_toBottomOf="@id/tv_flip_direction"/>

    <TextView
        android:id="@+id/tv_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rotate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flip_direction"
        style="@style/Button"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:useMaterialThemeColors="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:shadowColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/tv_rotate"
        app:layout_constraintBottom_toBottomOf="@id/tv_rotate"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="tvPresets,rvPresets,tvLightCycleSpeed,light_speed,tv_flip_direction,flip_direction,tv_rotate,switch_rotate"/>

</androidx.constraintlayout.widget.ConstraintLayout>